--- a/user/src/App.css
+++ b/user/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -21,7 +21,6 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
@@ -79,6 +78,7 @@ body {
 }
 
 h1 {
+  color: black;
   font-family: monospace;
 }
 
@@ -128,6 +128,15 @@ h3,
 p {
   font-family: "Open Sans", sans-serif;
   margin-bottom: 30px;
+}*/
+.share_modal{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  gap: 4rem;
+}
+.share_modal h3{
+  font-family: 'Courier New', Courier, monospace;
 }
 .share {
   padding: 16px;
@@ -141,10 +150,13 @@ p {
   border-radius: 4px;
   font-size: 13px;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  z-index: -1;
 }
 
 .share:hover {
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
     0 17px 50px 0 rgba(0, 0, 0, 0.19);
+} 
+
+.App{
+  background: aliceblue;
 }
