--- a/user/src/components/Modal/Modal.css
+++ b/user/src/components/Modal/Modal.css
@@ -1,8 +1,6 @@
 .modalBackground {
     width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.2);
-    position: fixed;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
