--- a/user/src/components/display/Display.css
+++ b/user/src/components/display/Display.css
@@ -24,7 +24,6 @@
     border: none;
     font-size: 16px;
     border-radius: 5px;
-    margin-right: 10px;
     padding-bottom: 10px;
   }
   .button:hover {
@@ -41,3 +40,15 @@
   input[type="text"]:focus {
     background-color: lightblue;
   }
+.get_data{
+  width: 100%;
+    justify-content: center;
+    display: flex;
+}
+.display .getfile_content{
+  width: 100%;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  
+}
